--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
              beforeRequest();
         }
     </script>
-    <script src="/dist/build.js?v=6"></script>
+    <script src="/dist/build.js"></script>
   </body>
 </html>
 
